tests/ui/traits/impl-1.stderr
error[E0599]: no method named `foo` found for reference `&i32` in the current scope
  --> $DIR/impl-1.rs:15:7
   |
LL |     x.foo();
   |       ^^^ method not found in `&i32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
